# deep-cowork

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: build.yml
agent/: .env.example  .gitignore  agent_core.py  bundle.py  config.py  hitl.py  llm.py  main.py  prompts.py  pyproject.toml  state.py  stream.py  tools.py
agent/routes/: agent_routes.py  files.py  settings.py
app/: .env.cloud  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css  store.ts  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/binaries/: .gitkeep
app/src-tauri/src/: lib.rs
app/src/components/: AgentPanel.tsx  ApprovalModal.tsx  ChatArea.tsx  FilePanel.tsx  MarkdownContent.tsx  MemoryPanel.tsx  MessageStream.tsx  ModeSwitch.tsx  SettingsModal.tsx  SkillsPanel.tsx  ThreadList.tsx  TodoCard.tsx
app/src/hooks/: useStreamHandler.ts
app/src/lib/: api.ts  branding.ts  deploy.ts  i18n.ts  sse-types.ts
docs/: 02_cowork_deepagents_mapping.md  03_opencowork_projects_analysis.md  04_project_comparison.md  05_tauri_deepagents_feasibility.md  06_tauri_sidecar_lifecycle.md  07_ui_analysis.md  08_implementation_log.md  09_claude_cowork_evaluation.md  10_samsung_oneui_langgraph_migration.md
